--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             type="text/javascript"
             src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-601f835789789a3b"
         ></script>
+        <meta name="naver-site-verification" content="0031ae826a0880cb3e13b79d5882d963519ad50d" />
     </head>
 
     <body>
@@ -155,6 +156,13 @@
                 </div>
             </div>
         </div>
+        <div class="ad-banner">
+        <ins class="kakao_ad_area" style="display:none;" 
+ data-ad-unit    = "DAN-BhE2rYMxsXVzHgOK" 
+ data-ad-width   = "320" 
+ data-ad-height  = "100"></ins>
+        </div>
+<script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
         <div id="webcam-container"></div>
 
         <div id="disqus_thread"></div>
