--- a/femail.html
+++ b/femail.html
@@ -155,6 +155,13 @@
                 </div>
             </div>
         </div>
+        <div class="ad-banner">
+        <ins class="kakao_ad_area" style="display:none;" 
+ data-ad-unit    = "DAN-BhE2rYMxsXVzHgOK" 
+ data-ad-width   = "320" 
+ data-ad-height  = "100"></ins>
+        </div>
+<script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
         <div id="webcam-container"></div>
 
         <div id="disqus_thread"></div>
