--- a/index.html
+++ b/index.html
@@ -255,23 +255,23 @@
                 switch (prediction[0].className) {
                     case 'street':
                         resultTitle = '스트릿 룩'
-                        resultExplain = '당신은 스트릿 룩과 잘 어울리는 얼굴을 갖고 있습니다! 스트릿 룩이 처음이라면, 박서준님, 송민호님의 코디를 참고하면 당신도 패션피플이 될 수 있어요!'
+                        resultExplain = '당신은 스트릿 룩과 잘 어울리는 외모를 갖고 있습니다! 스트릿 룩이 처음이라면, 박서준님, 송민호님의 코디를 참고하면 당신도 패션피플이 될 수 있어요!'
                         break;
                     case 'formal':
                         resultTitle = '포멀 룩'
-                        resultExplain = '당신은 깔끔한 포멀 룩과 잘 어울리는 얼굴을 갖고 있습니다! 포멀룩이 처음이라면, 배정남님, 유재석님의 코드릴 참고하면 당신도 패션피플이 될 수 있어요!'
+                        resultExplain = '당신은 깔끔한 포멀 룩과 잘 어울리는 외모를 갖고 있습니다! 포멀룩이 처음이라면, 배정남님, 유재석님의 코드릴 참고하면 당신도 패션피플이 될 수 있어요!'
                         break;
                     case 'casual':
                         resultTitle = '캐주얼 룩'
-                        resultExplain = '당신은 남친룩의 정석. 캐주얼 룩과 잘 어울리는 얼굴을 갖고 있습니다! 캐주얼 룩이 처음이라면, 서강준님, 류준열님의 코디를 참고하면 당신도 패션피플이 될 수 있어요!'
+                        resultExplain = '당신은 남친룩의 정석. 캐주얼 룩과 잘 어울리는 외모를 갖고 있습니다! 캐주얼 룩이 처음이라면, 서강준님, 류준열님의 코디를 참고하면 당신도 패션피플이 될 수 있어요!'
                         break;
                     case 'amekaji':
                         resultTitle = '아메카지 룩'
-                        resultExplain = '당신은 아메카지 룩과 잘 어울리는 얼굴을 갖고 있습니다! 아메카지 룩이 처음이라면, 김기방님, 변요한님의 코디를 참고하면 당신도 패션피플이 될 수 있어요! '
+                        resultExplain = '당신은 아메카지 룩과 잘 어울리는 외모를 갖고 있습니다! 아메카지 룩이 처음이라면, 김기방님, 변요한님의 코디를 참고하면 당신도 패션피플이 될 수 있어요! '
                         break;
                     case 'cityboy':
                         resultTitle = '시티보이 룩'
-                        resultExplain = '당신은 시티보이 룩과 잘 어울리는 얼굴을 갖고 있습니다! 시티보이 룩이 처음이라면, 최우식님, 메드크라운님의 코디를 참고하면 당신도 패션피플이 될 수 있어요!'
+                        resultExplain = '당신은 시티보이 룩과 잘 어울리는 외모를 갖고 있습니다! 시티보이 룩이 처음이라면, 최우식님, 메드크라운님의 코디를 참고하면 당신도 패션피플이 될 수 있어요!'
                         break;
                     default:
                         resultTitle = '알수없음'
