--- a/index.html
+++ b/index.html
@@ -89,11 +89,11 @@
             <div class="container mt-5 instagram-cover d-flex flex-row-reverse">
                 
                  <a
-                    href="/what-your-fashion/femail.html"
+                    href="../femail.html"
                     class="instagram-link"
                     >여자<img src="img/student.png" alt="" class="instagram-icon" />                    </a>
                 <a
-                    href="/what-your-fashion/index.html"
+                    href="../index.html"
                     class="instagram-link"
                     >남자<img src="img/son.png" alt="" class="instagram-icon" />                    </a>
                
