--- a/femail.html
+++ b/femail.html
@@ -225,7 +225,7 @@
         <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.3.1/dist/tf.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@0.8/dist/teachablemachine-image.min.js"></script>
         <script type="text/javascript">
-            const URL = "https://teachablemachine.withgoogle.com/models/6MoeVuvQu/";
+            const URL = "https://teachablemachine.withgoogle.com/models/NWeYhfGvO/";
 
             let model, webcam, labelContainer, maxPredictions;
 
@@ -254,19 +254,19 @@
                 switch (prediction[0].className) {
                     case 'chic':
                         resultTitle = '락시크 룩'
-                        resultExplain = '당신은 락시크룩과 잘 어울리는 외모를 갖고있습니다! 락 시크 룩이 처음이라면 현아님의 코디를 참고하시는게 어때요!?'
+                        resultExplain = '당신은 락시크룩과 잘 어울리는 외모를 갖고있습니다! 락 시크 룩이 처음이라면 현아님, 이다희님의 코디를 참고하시는게 어때요!?'
                         break;
                     case 'lovely':
                         resultTitle = '러블리 룩'
-                        resultExplain = '당신은 러블리룩과 잘 어울리는 외모를 갖고있습니다! 사랑스러운 외모를 갖고있는 당신! 러블리 룩이 처음이라면, 박보영님의 코디를 참고하시면 좋을 것 같아요 ^_^'
+                        resultExplain = '당신은 러블리룩과 잘 어울리는 외모를 갖고있습니다! 사랑스러운 외모를 갖고있는 당신! 러블리 룩이 처음이라면, 박보영, 츄 님의 코디를 참고하시면 좋을 것 같아요 ^_^'
                         break;
                     case 'street':
                         resultTitle = '스트릿 룩'
-                        resultExplain = '당신은 스트릿룩과 잘 어울리는 외모를 갖고있습니다!스트릿 룩이 처음이라면 산다라박, 김희정님의 코디를 참고하시면 좋을 것 같아요 ^_^'
+                        resultExplain = '당신은 스트릿룩과 잘 어울리는 외모를 갖고있습니다!스트릿 룩이 처음이라면 산다라박, 김희정, 황보님의 코디를 참고하시면 좋을 것 같아요 ^_^'
                         break;
                     case 'office':
                         resultTitle = '오피스 룩'
-                        resultExplain = '당신은 오피스룩과 잘 어울리는 외모를 갖고있습니다! 오피스룩이 처음이라면 박민영님의 코디를 참고하시면 좋을 것 같아요 ^_^'
+                        resultExplain = '당신은 오피스룩과 잘 어울리는 외모를 갖고있습니다! 오피스룩이 처음이라면 박민영 ,신아영님의 코디를 참고하시면 좋을 것 같아요 ^_^'
                         break;
                     case 'casual':
                         resultTitle = '캐주얼 룩'
