--- a/femail.html
+++ b/femail.html
@@ -115,6 +115,7 @@
                     <img src="img/upload.svg" class="mt-5 pt-5 upload" />
                     <h3 class="mb-5 pb-5 pt-4 upload-text">
                         얼굴 사진을 올려놓거나 눌러서 업로드하세요!
+                        올라온 사진은 절대 저장 안돼요!
                     </h3>
                     <!-- </div>
             </div>
