--- a/femail.html
+++ b/femail.html
@@ -88,12 +88,12 @@
          <section class="instagram">
             <div class="container mt-5 instagram-cover d-flex flex-row-reverse">
                 
-                 <a
-                    href="https://what-your-fashion-edoxz.run.goorm.io/what-your-fashion/femail.html"
+                <a
+                    href="../femail.html"
                     class="instagram-link"
                     >여자<img src="img/student.png" alt="" class="instagram-icon" />                    </a>
                 <a
-                    href="https://what-your-fashion-edoxz.run.goorm.io/what-your-fashion/index.html"
+                    href="../index.html"
                     class="instagram-link"
                     >남자<img src="img/son.png" alt="" class="instagram-icon" />                    </a>
             </div>
