--- a/index.html
+++ b/index.html
@@ -163,6 +163,21 @@
  data-ad-width   = "320" 
  data-ad-height  = "100"></ins>
         </div>
+        
+        <div class="ad-banner">
+        <ins class="kakao_ad_area" style="display:none;" 
+ data-ad-unit    = "DAN-w3nSvhBA2vydndsA" 
+ data-ad-width   = "320" 
+ data-ad-height  = "100"></ins> 
+            </div>
+       <div class="ad-banner">
+        <ins class="kakao_ad_area" style="display:none;" 
+ data-ad-unit    = "DAN-fqEc6rkfFmls49kH" 
+ data-ad-width   = "320" 
+ data-ad-height  = "100"></ins>
+            </div>
+<script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
+<script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
 <script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
         <div id="webcam-container"></div>
 
