--- a/index.html
+++ b/index.html
@@ -25,6 +25,13 @@
         <nav class="navbar navbar-expand-lg navbar-light nav-distnace">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">MY STYLE TEST</a>
+                <div class="ad-banner">
+                <ins class="kakao_ad_area" style="display:none;" 
+ data-ad-unit    = "DAN-bR91vPWcIfjFZa73" 
+ data-ad-width   = "320" 
+ data-ad-height  = "100"></ins>
+                    </div>    
+<script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
                 <button
                     class="navbar-toggler"
                     type="button"
@@ -157,6 +164,7 @@
                 </div>
             </div>
         </div>
+         <div class="container mt-5 instagram-cover d-flex flex-row-reverse"> <a href="https://www.youtube.com/channel/UCQNE2JmbasNYbjGAcuBiRRg" class="youtube">제작 도움: 조코딩 유트브 채널</a> </div>
         <div class="ad-banner">
         <ins class="kakao_ad_area" style="display:none;" 
  data-ad-unit    = "DAN-BhE2rYMxsXVzHgOK" 
